<resources>
    <string name="autopetfeeder">auto pet feeder</string>
    <string name="greetings">Welcome to \nSmart Pet Feeder</string>
    <string name="img">Logo</string>
    <string name="moto">Keeping Your Pet Fed, Anytime,Anywhere.</string>
    <string name="landingpage_btn">LETS GO</string>
    <string name="logo_desc">Paw print logo</string>
    <string name="create_account">Create Account</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter your username</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>"
    <string name="sign_up">Sign Up</string>
    <string name="or_separator">- OR -</string>
    <string name="googleBtn">Sign Up with Google</string>
    <string name="facebookBtn">Sign Up with Facebook</string>
    <string name="login">Log in</string>
    <string name="welcome_greetings">Welcome Back</string>
    <string name="google_loginBTN">Log in with Google</string>
    <string name="facebook_loginBTN">Log in with Facebook</string>"
    <string name="link">forgot <u>password??</u></string>
    <string name="signup_link">dont have account?? <u><b>SIGN UP</b></u></string>

    <string name="dashboard_greetings">Welcome</string>
    <string name="view_page">Realtime Display</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="feeding_schedule">Feeding Schedule</string>
    <string name="add_sched">Add Schedule</string>
    <string name="auto">Auto</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="label_select_day">Select Days</string>
    <string name="day1">Mon</string>
    <string name="day2">Tue</string>
    <string name="day3">Wed</string>
    <string name="day4">Thu</string>
    <string name="day5">Fri</string>
    <string name="day6">Sat</string>
    <string name="day7">Sun</string>


</resources>