<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="260dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/fredoka_bold"
            android:letterSpacing=".09"
            android:text="@string/add_schedule"
            android:textColor="@color/navyblue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:theme="@style/TimePickerBlackText"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fredoka_meduim"
            android:letterSpacing=".09"
            android:text="@string/label_select_day"
            android:textColor="@color/navyblue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dayChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="8dp"
            app:chipSpacingVertical="4dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMonday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day1"
                android:textColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTuesday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day2"
                android:textColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWednesday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day3"
                android:textColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThursday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day4"
                android:textColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFriday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day5"
                android:textColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSaturday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day6"
                android:textColor="@color/white" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSunday"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navyblue"
                android:text="@string/day7"
                android:textColor="@color/white" />
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/navyblue"
            android:fontFamily="@font/fredoka_semibold"
            android:letterSpacing=".09"
            android:textColor="@color/white"
            android:text="@string/save_schedule" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>