<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="162dp"
        android:layout_height="114dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paw" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/fredoka_bold"
        android:text="@string/create_account"
        android:textColor="@color/navyblue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka_meduim"
        android:letterSpacing=".09"
        android:text="@string/label_username"
        android:textColor="#143345"
        app:layout_constraintBottom_toTopOf="@+id/usernameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="off"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/user"
        android:drawablePadding="12dp"
        android:drawableTint="#143345"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="12dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="317dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka_meduim"
        android:gravity="center_vertical"
        android:letterSpacing=".09"
        android:text="@string/label_email"
        android:textColor="#143345"
        app:layout_constraintBottom_toTopOf="@+id/emailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="12dp"
        android:drawableTint="#143345"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka_meduim"
        android:letterSpacing=".09"
        android:text="@string/label_password"
        android:textColor="#143345"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:drawableTint="#143345"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/confirmpassField"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/checkboxBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka_meduim"
        android:letterSpacing=".09"
        android:text="@string/label_confirm_password"
        android:textColor="#143345"
        app:layout_constraintBottom_toTopOf="@+id/confirmpassField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />


    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/navyblue"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxBTN" />

    <CheckBox
        android:id="@+id/checkboxBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/fredoka_bold"
        android:letterSpacing=".09"
        android:padding="12dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/navyblue"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassField" />

    <Button
        android:id="@+id/googleBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/navyblue"
        android:drawablePadding="12dp"
        android:icon="@drawable/google_logo"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:text="@string/googleBtn"
        app:layout_constraintBottom_toTopOf="@+id/facebookBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/facebookBTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/navyblue"
        android:drawableStart="@drawable/facebook_logo"
        android:text="@string/facebookBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBTN" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fredoka_bold"
        android:letterSpacing=".09"
        android:text="@string/or_separator"
        android:textColor="@color/navyblue"
        app:layout_constraintBottom_toTopOf="@+id/googleBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>