<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9EE">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="177dp"
        android:layout_height="357dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/img"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/landingBTN"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/husky" />

    <Button
        android:id="@+id/landingBTN"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#143345"
        android:letterSpacing=".09"
        android:text="@string/landingpage_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/fredoka_regular"
        android:text="@string/moto"
        android:textAlignment="inherit"
        android:textColor="#143345"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="53dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/fredoka_meduim"
        android:text="@string/greetings"
        android:textColor="#143345"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>